Grease pencil not rendering out of VSE #49622

Closed
opened 2016-10-11 02:28:00 +02:00 by Dan Turner · 7 comments

System Information
Win7 NVIDIA GeForce GTX 950

Blender Version
Broken: 2.78 4bb1e22

Grease pencil layers drawn in several scenes in a single blender file. Added scenes as strips in VSE. The grease pencil is visible and plays in preview. When I attempt to click Open GL render active viewport, blender closes

Exact steps for others to reproduce the error
Create several scenes in blender file. In each one add a new grease pencil data block and draw image. In vse add the scenes as scene strips. Click render active viewport

**System Information** Win7 NVIDIA GeForce GTX 950 **Blender Version** Broken: 2.78 4bb1e22 Grease pencil layers drawn in several scenes in a single blender file. Added scenes as strips in VSE. The grease pencil is visible and plays in preview. When I attempt to click Open GL render active viewport, blender closes **Exact steps for others to reproduce the error** Create several scenes in blender file. In each one add a new grease pencil data block and draw image. In vse add the scenes as scene strips. Click render active viewport
Joshua Leung was assigned by Dan Turner 2016-10-11 02:28:00 +02:00
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @danT

Added subscriber: @danT

Added subscribers: @JoshuaLeung, @Sergey

Added subscribers: @JoshuaLeung, @Sergey
Joshua Leung was unassigned by Sergey Sharybin 2016-10-11 11:57:30 +02:00

Please always attach .blend file which demonstrates the issue. That saves a lot of time dealing with bug tracker.

Please always attach .blend file which demonstrates the issue. That saves a lot of time dealing with bug tracker.
Author

Hi Sergey,

Here is the file that was crashing when I hit render active viewport while in the VSE. I went back and turned GPU rendering off to see if that would fix it but it still crashed.

Dan{F377181}

Hi Sergey, Here is the file that was crashing when I hit render active viewport while in the VSE. I went back and turned GPU rendering off to see if that would fix it but it still crashed. Dan{[F377181](https://archive.blender.org/developer/F377181/GreasePencil_VSE.blend)}
Sergey Sharybin self-assigned this 2016-10-12 09:36:45 +02:00

This issue was referenced by acbbcdfbb8

This issue was referenced by acbbcdfbb8d63ad783410120db12ab1540822a0e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49622
No description provided.