Fix T49622: Grease pencil not rendering out of VSE