source/blender/editors/render/render_opengl.c
@@ -445,7 +445,7 @@ static void add_gpencil_renderpass(OGLRender *oglrender, RenderResult *rr, Rende
 	if (BLI_listbase_is_empty(&gpd->layers)) {
 		return;
 	}
-	if ((oglrender->v3d->flag2 & V3D_SHOW_GPENCIL) == 0) {
+	if (oglrender->v3d != NULL && (oglrender->v3d->flag2 & V3D_SHOW_GPENCIL) == 0) {
 		return;
 	}
 
